# University

./: .gitignore  README.md
Algorithms and Data Structures/: README.md
Algorithms and Data Structures/Iterated Local Search/: Algoritms.py  Dot.py  Functions.py  Visualization.py  main.py
Algorithms and Data Structures/Scatter Search/: Dot.py  Funs.py  RLS.py  Subset_Combination.py  Subset_Generation.py  main.py
C++/Ex 1/: README.md
C++/Ex 10/: README.md
C++/Ex 3/: .travis.yml
C++/Ex01/: README.md
C++/Ex02/: README.md
C++/Ex03/: README.md
C++/Ex05/: README.md
C++/Ex06/: README.md
C++/Ex06/test/: tests.cpp
C++/Ex07/: README.md
C++/Ex08/: README.md
C++/Ex08/test/: tests.cpp
C++/Ex09/: README.md
C++/Ex09/src/: main.cpp
C++/Ex09/test/: tests.cpp
C++/Ex10/: README.md
C++/Exercises/Ex 2/: README.md
C++/Exercises/Ex 3/: README.md
C++/Labs/Lab 7/src/: CMakeLists.txt
Concurrent computing/: .gitignore  README.md  input  main.c  output.csv  visualize.py
Concurrent computing/Lab 1/: README.md  input  main.c  visualize.py
Concurrent computing/Lab 2/: .gitignore  README.md  main-col-wise.cpp  main-row-wise.cpp
Data Mining/Lab_2/: Lab_2. Clustering.html  Lab_2. Clustering.ipynb
Data Mining/Lab_4/: lab_4.html  lab_4.ipynb
Data Mining/Lab_6/: Lab_6.html  Lab_6.ipynb
Data Mining/Lab_7/: Lab_7.html  Lab_7.ipynb
Data Scraping/: README.md
Databases/Lab_2/: README.md  funs.py  main.py  sql.py
DevOps/Final Project/: Dockerfile  requirements.txt
DevOps/Introduction Exercise/: app.py
Java/Lab_2/: file.txt  output.txt
(+24 files in other folders)
